Default radiometric calibration

--- a/ipython/system/Download Thumbnails-local.ipynb
+++ b/ipython/system/Download Thumbnails-local.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "  warnings.warn(\"failed to import module %s\" % name)\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -66,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '109L', '110', '110L', '111', '111L', '112L', '113', '113L', '114', '114L', '115', '115L', '116', '116L', '118', '119', '120']\n"
+      "['109', '109L', '110', '110L', '111', '111L', '112L', '113', '113L', '114', '114L', '115', '115L', '116', '116L', '117', '117L', '118L', '120']\n"
      ]
     }
    ],
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -134,6 +143,8 @@
       "('109L', '2017_03_24', <type 'exceptions.Exception'>)\n",
       "('109L', '2017_03_26', <type 'exceptions.Exception'>)\n",
       "('109L', '2017_03_27', <type 'exceptions.Exception'>)\n",
+      "('110L', '2016_11_28', <type 'exceptions.Exception'>)\n",
+      "('110L', '2017_02_16', <type 'exceptions.Exception'>)\n",
       "('110L', '2017_03_10', <type 'exceptions.Exception'>)\n",
       "('111L', '2017_02_20', <type 'exceptions.IOError'>)\n",
       "('111L', '2017_03_23', <type 'exceptions.Exception'>)\n",
@@ -148,7 +159,8 @@
       "('113L', '2017_02_19', <type 'exceptions.Exception'>)\n",
       "('114L', '2017_02_21', <type 'exceptions.Exception'>)\n",
       "('115L', '2017_02_20', <type 'exceptions.Exception'>)\n",
-      "('116L', '2017_04_12', <type 'exceptions.IOError'>)\n"
+      "('116L', '2017_04_12', <type 'exceptions.IOError'>)\n",
+      "('117L', '2017_04_18', <type 'exceptions.Exception'>)\n"
      ]
     }
    ],
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -168,10 +180,10 @@
     {
      "data": {
       "text/plain": [
-       "3562.9219999313354"
+       "4231.09700012207"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -211,6 +223,10 @@
       "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\109L\\1488383700.0_2017_03_01_15_55_00_2..jpg is a low contrast image\n",
       "  warn('%s is a low contrast image' % fname)\n",
       "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\109L\\1489582500.0_2017_03_15_12_55_00_2..jpg is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\110L\\1485338340.0_2017_01_25_09_59_00_2..jpg is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\110L\\1485341940.0_2017_01_25_10_59_00_2..jpg is a low contrast image\n",
       "  warn('%s is a low contrast image' % fname)\n",
       "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\110L\\1488297300.0_2017_02_28_15_55_00_2..jpg is a low contrast image\n",
       "  warn('%s is a low contrast image' % fname)\n",
@@ -255,6 +271,12 @@
       "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\115L\\1489582500.0_2017_03_15_12_55_00_2..jpg is a low contrast image\n",
       "  warn('%s is a low contrast image' % fname)\n",
       "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\116L\\1489586100.0_2017_03_15_13_55_00_2..jpg is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\117L\\1489467300.0_2017_03_14_04_55_00_2..jpg is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\117L\\1489578900.0_2017_03_15_11_55_00_2..jpg is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "C:\\Anaconda2\\lib\\site-packages\\skimage\\io\\_io.py:132: UserWarning: thumbnails\\118L\\1490846100.0_2017_03_30_03_55_00_2..jpg is a low contrast image\n",
       "  warn('%s is a low contrast image' % fname)\n"
      ]
     }
@@ -280,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +363,6 @@
        " '110L',\n",
        " '111',\n",
        " '111L',\n",
-       " '112',\n",
        " '112L',\n",
        " '113',\n",
        " '113L',\n",
@@ -358,7 +379,7 @@
        " '120']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
