Work on python notebooks

--- a/ipython/radiometric/sunphotometer phase functions.ipynb
+++ b/ipython/radiometric/sunphotometer phase functions.ipynb
@@ -1880,7 +1880,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -1894,19 +1894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "c3595fad3deb4346ae35781188c3db1f": {
-     "views": [
-      {
-       "cell_index": 12
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
