Added missing notebooks

--- a/ipython/radiometric/color stats.ipynb
+++ b/ipython/radiometric/color stats.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -212,13 +212,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flux in uW/cm^2: 19338.1532981\n"
+      "Flux in W/m^2: 193.381532981\n"
      ]
     }
    ],
    "source": [
-    "flux_green = solar_irr.inband_solarflux(TEST_RSR, scale=1.0)\n",
-    "print(\"Flux in uW/cm^2: {}\".format(flux_green*1e6/1e2/1e2))"
+    "red_flux = solar_irr.inband_solarflux(TEST_RSR, scale=1.0)\n",
+    "print(\"Flux in W/m^2: {}\".format(red_flux))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gauss_area = np.trapz(y=TEST_RSR['det-1'][\"response\"], x=TEST_RSR['det-1'][\"wavelength\"]) * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6658941228097737"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "red_flux / gauss_area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e2*1e2/1e6"
    ]
   },
   {
@@ -233,7 +288,7 @@
    "execution_count": 92,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -520,13 +575,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steradian per Pixel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are $2 \\pi$ steradians in a half sphere. There are $\\pi \\dot r^2$ pixles in an image (where $r$ is the half length/width of an image)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.829924614518602e-05"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = 301/2.\n",
+    "(2 * math.pi) / (math.pi * r**2)"
+   ]
   }
  ],
  "metadata": {
