Debug phase functions

--- a/ipython/radiometric/sunphotometer phase functions.ipynb
+++ b/ipython/radiometric/sunphotometer phase functions.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
-    "%matplotlib inline\n",
+    "%matplotlib notebook\n",
     "import cPickle\n",
     "import datetime\n",
     "from dateutil import parser\n",
@@ -1878,8 +1878,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1959,7 +1958,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1973,19 +1972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
-  },
-  "widgets": {
-   "state": {
-    "1c3901519fb64abba1c48d6638b48151": {
-     "views": [
-      {
-       "cell_index": 12
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
