Update some of the notebooks

--- a/ipython/radiometric/sunphotometer phase functions.ipynb
+++ b/ipython/radiometric/sunphotometer phase functions.ipynb
@@ -2623,7 +2623,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -2637,19 +2637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "04d969b529574393b429ae9559410d17": {
-     "views": [
-      {
-       "cell_index": 23
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
