--- a/ipython/system/Download EC2 Results.ipynb
+++ b/ipython/system/Download EC2 Results.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,12 +39,14 @@
     "BASE_REMOTE_PATH = \"/home/ubuntu/code/pyshdom/scripts/results/camera_array_retrieval.py\"\n",
     "BASE_LOCAL_PATH =  \"./results\"\n",
     "HOSTS = (\"35.158.158.179\", \"35.158.233.59\", \"52.59.55.162\")\n",
-    "DOWNLOAD_FILES = ('beta.pkl', 'params.txt')"
+    "DOWNLOAD_FILES = ('beta.pkl', 'params.txt')\n",
+    "KEY_PATH = r\"C:\\Users\\amitaid\\Downloads\\aviad_ec2.pem\"\n",
+    "KEY_PATH = r\"C:\\Users\\amitibo\\Dropbox\\aviad_ec2.pem\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +89,7 @@
     }
    ],
    "source": [
-    "k = paramiko.RSAKey.from_private_key_file(r\"C:\\Users\\amitaid\\Downloads\\aviad_ec2.pem\")\n",
+    "k = paramiko.RSAKey.from_private_key_file(KEY_PATH)\n",
     "c = paramiko.SSHClient()\n",
     "c.set_missing_host_key_policy(paramiko.AutoAddPolicy())\n",
     "for host in tqdm_notebook(HOSTS):\n",
@@ -108,11 +110,21 @@
     "                    print(\"Failed copying {}\".format(fname))\n",
     "                    raise"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -126,32 +138,32 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "widgets": {
    "state": {
-    "a8c18563cf4f41f19cb0f40c5165d185": {
+    "61ac3cc02d324f15945e05f194fa9121": {
      "views": [
       {
        "cell_index": 5
       }
      ]
     },
-    "b7b8d8111d73402394aeeceef00b639e": {
+    "74b5b5797dca412f930abace6caca461": {
      "views": [
       {
        "cell_index": 5
       }
      ]
     },
-    "d5679a767d444d7f8a657864152fee92": {
+    "85f3391a28844100ae483f44a4152f97": {
      "views": [
       {
        "cell_index": 5
       }
      ]
     },
-    "d8d9539d58894597ae6d7d17e4fe2868": {
+    "db2d8dcaa36643a5bed09406097dae23": {
      "views": [
       {
        "cell_index": 5
