--- a/ipython/reconstruction/visualize_data.ipynb
+++ b/ipython/reconstruction/visualize_data.ipynb
@@ -273,7 +273,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -287,19 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "d3748da158b543cea519977d8f64e708": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
