--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -38,16 +36,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '110', '111', '112', '113', '114', '115', '116', '117', '118', '119']\n"
+      "['109', '109L', '110', '110L', '111', '111L', '112', '113L', '114L', '115', '116', '116L', '117L', '118', '118L', '119', '119L', '120', '219', '999']\n"
      ]
     }
    ],
@@ -62,33 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "CAM = 113\n",
-    "DAY = 5\n",
-    "MONTH = 4"
+    "CAM = 219\n",
+    "DAY = 15\n",
+    "MONTH = 6\n",
+    "HDR = '3'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Camera 113 captured 668 images on this day.\n"
+      "Camera 219 captured 1058 images on this day.\n"
      ]
     }
    ],
@@ -99,17 +92,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d34e0557cfda4c48ae3da94f6a238226"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\User\\Anaconda2\\lib\\threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\User\\Anaconda2\\lib\\site-packages\\tqdm\\_tqdm.py\", line 103, in run\n",
+      "    for instance in self.tqdm_cls._instances:\n",
+      "  File \"C:\\Users\\User\\Anaconda2\\lib\\_weakrefset.py\", line 60, in __iter__\n",
+      "    for itemref in self.data:\n",
+      "RuntimeError: Set changed size during iteration\n",
       "\n"
      ]
     }
@@ -117,11 +133,11 @@
    "source": [
     "JPEG_QUALITY = 100\n",
     "video = cv2.VideoWriter(\n",
-    "    'video_{}_2017_{:02}_{:02}.avi'.format(CAM, MONTH, DAY),\n",
-    "    -1, 6, (301, 301)\n",
+    "    'video_{}_2017_{:02}_{:02}_{}.avi'.format(CAM, MONTH, DAY, HDR),\n",
+    "    -1, 6, (800, 600)\n",
     ")\n",
     "\n",
-    "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
+    "for ind in tqdm_notebook(df.loc[(slice(None), HDR), :].index):\n",
     "    try:\n",
     "        img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0][0]\n",
     "        img = Image.fromarray(img)\n",
@@ -141,11 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -154,82 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]],\n",
-       " \n",
-       "        ..., \n",
-       "        [[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         ..., \n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0],\n",
-       "         [0, 0, 0]]], dtype=uint8)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
