--- a/ipython/system/Download EC2 Results.ipynb
+++ b/ipython/system/Download EC2 Results.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Download Reconstruction Results "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Recursively download all results from EC2 instances."
    ]
@@ -18,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -30,25 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "BASE_REMOTE_PATH = \"/home/ubuntu/code/pyshdom/scripts/results/camera_array_retrieval.py\"\n",
     "BASE_LOCAL_PATH =  \"./results\"\n",
-    "HOSTS = (\"35.158.158.179\", \"35.158.233.59\", \"52.59.55.162\")\n",
+    "HOSTS = (\"35.158.158.179\", \"35.158.233.59\", \"52.59.55.162\", \"52.28.195.198\", \"52.59.31.196\")\n",
     "DOWNLOAD_FILES = ('beta.pkl', 'params.txt')\n",
-    "KEY_PATH = r\"C:\\Users\\amitaid\\Downloads\\aviad_ec2.pem\"\n",
-    "KEY_PATH = r\"C:\\Users\\amitibo\\Dropbox\\aviad_ec2.pem\""
+    "# IBM\n",
+    "#KEY_PATH = r\"C:\\Users\\amitaid\\Downloads\\aviad_ec2.pem\"\n",
+    "# Office\n",
+    "#KEY_PATH = r\"C:\\Users\\amitibo\\Dropbox\\aviad_ec2.pem\"\n",
+    "# Home\n",
+    "KEY_PATH = r\"C:\\Users\\user\\Dropbox\\aviad_ec2.pem\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -75,11 +91,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceb5900d998b4e199ac711dd796fd110"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4d9e44ce3434bd7863569e5e3fb1943"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d16c28f1200d405488326d5cde391a3c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d86bf904f33f402091a0824dc2918879"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd8a331ffbe44b778d63641d4ec4ac70"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28ea580a33d94457a4a2af75e9e5e555"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -115,7 +187,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -124,7 +198,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -138,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   },
   "widgets": {
    "state": {
